sphinx/source/_static/custom.css
* {
    font-variant-ligatures: none;
}

.version-alert a {
    text-decoration: underline;
    color: #ddd;
}

#banner .version-alert {
    background-color: #CF462A;
    padding: 1em;
    color: #fff;
    font-family: "Work Sans", sans-serif;
    font-weight: 600; font-size: 16px;
}

.version-alert a {
    text-decoration: underline;
    color: #ddd;
}

#banner .news-alert {
    background-color: #ECD078;
    padding: 1em;
    font-family: "Work Sans", sans-serif;
    font-weight: 600; font-size: 16px;
}

.news-alert a {
    text-decoration: underline;
    color: #444;
}

.btn { font-family: "Lato", sans-serif; }

.btn-primary { filter: brightness(90%); background-color: #C02942; border-color: #C02942; }
.btn-primary:hover { filter: brightness(100%); background-color: #C02942; border-color: #C02942; }

ul.gallery li {
    list-style-type: none;
    float:left
}

img.gallery {
    width: 200px;
    height:200px
}

a { color: #CF462A; }

code {
    font-family: SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,monospace;
    color: rgb(33, 37, 41);
    padding: 2px 1px 0px 1px;
    font-size: 80%;
    background-color:#eef0f1;
}

/* customize highlight color for sphinx code blocks */
.highlight .hll {
    background-color: rgba(246,169,27,0.3);
}

/* Customize theme font colors */
:root {
    --pst-color-primary: 33, 37, 41;
    --pst-color-success: 165, 205, 57;
    --pst-color-info: 0, 170, 174;
    --pst-color-warning: 240, 82, 35;
    --pst-color-danger: 220, 53, 69;
    --pst-color-text-base: var(--pst-color-primary);

    --pst-color-h1: var(--pst-color-primary);
    --pst-color-h2: var(--pst-color-primary);
    --pst-color-h3: var(--pst-color-text-base);
    --pst-color-h4: var(--pst-color-text-base);
    --pst-color-h5: var(--pst-color-text-base);
    --pst-color-h6: var(--pst-color-text-base);
    --pst-color-paragraph: var(--pst-color-text-base);
    --pst-color-link: 255, 0, 0;
    --pst-color-link-hover: 227, 46, 0;
    --pst-color-headerlink: 198, 15, 15;
    --pst-color-headerlink-hover: 255, 255, 255;

    --pst-color-active-navigation: var(--pst-color-primary);
    --pst-color-navbar-link: 77, 77, 77;
    --pst-color-navbar-link-hover: var(--pst-color-active-navigation);
    --pst-color-navbar-link-active: var(--pst-color-active-navigation);
    --pst-color-sidebar-link: 77, 77, 77;
    --pst-color-sidebar-link-hover: var(--pst-color-active-navigation);
    --pst-color-sidebar-link-active: var(--pst-color-active-navigation);
    --pst-color-sidebar-caption: 77, 77, 77;
    --pst-color-toc-link: 119, 117, 122;
    --pst-color-toc-link-hover: var(--pst-color-active-navigation);
    --pst-color-toc-link-active: var(--pst-color-active-navigation);

    --pst-color-admonition-default: var(--pst-color-info);
    --pst-color-admonition-note: var(--pst-color-info);
    --pst-color-admonition-attention: var(--pst-color-warning);
    --pst-color-admonition-caution: var(--pst-color-warning);
    --pst-color-admonition-warning: var(--pst-color-warning);
    --pst-color-admonition-danger: var(--pst-color-danger);
    --pst-color-admonition-error: var(--pst-color-danger);
    --pst-color-admonition-hint: var(--pst-color-success);
    --pst-color-admonition-tip: var(--pst-color-success);
    --pst-color-admonition-important: var(--pst-color-success);

    --pst-icon-admonition-default: var(--pst-icon-info-circle);
    --pst-icon-admonition-note: var(--pst-icon-info-circle);
    --pst-icon-admonition-attention: var(--pst-icon-exclamation-circle);
    --pst-icon-admonition-caution: var(--pst-icon-exclamation-triangle);
    --pst-icon-admonition-warning: var(--pst-icon-exclamation-triangle);
    --pst-icon-admonition-danger: var(--pst-icon-exclamation-triangle);
    --pst-icon-admonition-error: var(--pst-icon-times-circle);
    --pst-icon-admonition-hint: var(--pst-icon-lightbulb);
    --pst-icon-admonition-tip: var(--pst-icon-lightbulb);
    --pst-icon-admonition-important: var(--pst-icon-exclamation-circle);
}

/* Customize search box */
#search-input {
    border: 1px solid rgb(206, 212, 218);
    border-radius: 1.5px;
}

/* Custom styles for documentation landing page (index.rst) and other pages
using sphinx_panels */

.bokeh-examples {
    padding: 0px;
}

.bokeh-examples img {
    width: 100%;
    height: 100%;
}

.bg-bokeh-one {
    background-color: rgba(246,169,27,0.3);
}

.bg-bokeh-two {
    background-color: rgba(165,205,57,0.3);
}

.bg-bokeh-three {
    background-color: rgba(0,170,174,0.3);
}

.bg-bokeh-four {
    background-color: rgba(240,82,35,0.3);
}

.bg-bokeh-five {
    background-color: rgba(138,40,137,0.3);
}

.bg-bokeh-six {
    background-color: rgba(32,178,84,0.3);
}

.bg-bokeh-seven {
    background-color: rgba(236,21,87,0.3);
}

.card-header p {
    font-weight: 600;
    font-size: 125%;
}

.card-text a {
    font-weight: 600;
}

@media (max-width: 575px) {
    .examples-container .d-flex {
        width: 25%;
    }
}

/* style links */
.links {
    background-color: #542437;
    color: #fff;
}

.links h6 {
    font-weight: 700;
    font-size: 14px;
    color: #fff;
}

.links ul.nav li a {
    padding: 3px 0;
    font-family: "Lato", sans-serif;
    font-size: 13px;
    color: #fff;
}

.links-item { margin-top: 30px; }

/* style footer */
.page-footer h6 {
    color: #fff;
    font-weight: bold;
    margin: 8px 0px;
}

.links {
    background-color: #542437;
    font-size: 0.9rem;
}

.links a {padding: 3px 0px;}

.links-item {
    margin: 0px;
    padding: 20px 15px;
}

.copyright {
    background-color: #242729;
    font-size: 0.85rem;
    padding: 10px !important;
}

.copyright p {color: #eee;}

/* Pandas dataframe css */
 /* Taken from: https://github.com/spatialaudio/nbsphinx/blob/fb3ba670fc1ba5f54d4c487573dbc1b4ecf7e9ff/src/nbsphinx.py#L587-L619 */

 table.dataframe {
   border: none !important;
   border-collapse: collapse;
   border-spacing: 0;
   border-color: transparent;
   color: black;
   font-size: 12px;
   table-layout: fixed;
 }
 table.dataframe thead {
   border-bottom: 1px solid black;
   vertical-align: bottom;
 }
 table.dataframe tr,
 table.dataframe th,
 table.dataframe td {
   text-align: right;
   vertical-align: middle;
   padding: 0.5em 0.5em;
   line-height: normal;
   white-space: normal;
   max-width: none;
   border: none;
 }
 table.dataframe th {
   font-weight: bold;
 }
 table.dataframe tbody tr:nth-child(odd) {
   background: #f5f5f5;
 }
 table.dataframe tbody tr:hover {
   background: rgba(66, 165, 245, 0.2);
 }

 .autoclasstoc td {
     padding: 0.15rem;
     line-height: normal;
 }

.collapsible {
  background-color: #eee;
  color: #444;
  cursor: pointer;
  padding: 18px;
  width: 100%;
  border: none;
  text-align: left;
  outline: none;
  font-size: 15px;
}

/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
.active, .collapsible:hover {
  background-color: #ccc;
}

/* Style the collapsible content. Note: hidden by default */
.content {
  padding: 0 18px;
  display: none;
  overflow: hidden;
  background-color: #f1f1f1;
}

